1998-10-18  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_11_0 from flim-1_10_5.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.11.0.

1998-10-17  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el: Check broken facility consistency by
	`check-broken-facility'.

1998-10-14  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_10_5 from flim-1_10_2.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.10.2.

1998-10-09  Tanaka Akira      <akr@jaist.ac.jp>

	* mime-def.el (mime-library-product): Fix typo.

1998-10-09  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_10_2 from flim-1_10_0.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.10.1.

1998-09-30  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up with flim-1_10_0.

	* mime-def.el (mime-library-version): Bump up to FLAM-DOODLE
	1.10.0.

1998-09-25  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-compat.el: New file.

	* FLIM-ELS (flim-modules): Add `ew-compat'.

1998-09-21  Tanaka Akira      <akr@jaist.ac.jp>

	* mel.el: Use `broken-p' to check facility.

1998-09-21  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el:
	  - Require 'pccl instead of 'emu.
	  - Use `unless-broken' to check facility.

	* mime-def.el (mime-library-version): Bump up to FLAM-DOODLE
	1.9.5.

1998-09-19  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el (q-encoding-ccl-encoded-length): Check
	(featurep 'xemacs) instead of running-xemacs.

1998-09-19  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el (base64-ccl-insert-encoded-file): Use
	`mel-ccl-base64-lf-rev' instead of `mel-ccl-b-rev'.

	* mel.el (q-encoding-encoded-length ccl): Check
	(featurep 'xemacs) instead of running-xemacs.

1998-09-17  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-ccl.el (mel-ccl-decode-b): Cut bits over 8bit on last
	byte.

1998-09-17  Tanaka Akira      <akr@jaist.ac.jp>

	* mel.el (mel-defgeneric): Remove `stems' argument.
	(mel-stems): Exchange order between `external' and `internal'.